force-app/main/default/objects/Contact/fields/vlocity_cmt__UserLeaseExpires__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__UserLeaseExpires__c</fullName>
    <description>The time that the users lease token was issued.</description>
    <label>UserLeaseExpiration</label>
    <type>DateTime</type>
</CustomField>