force-app/main/default/objects/Contact/fields/vlocity_cmt__UserName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__UserName__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>UserName</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>