force-app/main/default/objects/Contact/recordTypes/dcp_Contact.recordType-meta.xml
<RecordType>
    <fullName>dcp_Contact</fullName>
    <active>true</active>
    <description>Contact RT for claims &amp; complaints</description>
    <label>DCP Contact</label>
</RecordType>