force-app/main/default/objects/Contact/recordTypes/REMI_Contact.recordType-meta.xml
<RecordType>
    <fullName>REMI_Contact</fullName>
    <active>true</active>
    <description>Contact Record type for REMI contact</description>
    <label>REMI Contact</label>
</RecordType>