force-app/main/default/objects/Contact/validationRules/DCP_RestrictIntegrationContactUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>DCP_RestrictIntegrationContactUpdate</fullName>
    <active>true</active>
    <description>Restrict agent from updating contact fields except phone &amp; home phone when contact is created by integration user</description>
    <errorConditionFormula>AND(OR(ISCHANGED( AccountId ) ,ISCHANGED( FirstName),ISCHANGED(  MiddleName ),ISCHANGED(  Salutation ),ISCHANGED(  Suffix ),ISCHANGED( LastName ),ISCHANGED( Email ),ISCHANGED( OwnerId ),ISCHANGED( MobilePhone ),ISCHANGED( OtherPhone ),ISCHANGED( MailingAddress),ISCHANGED( OwnerId )),CONTAINS( PRIORVALUE( DCP_ContactOwnerProfile__c),&apos;Integration&apos; ) ,CONTAINS(  $Profile.Name ,&apos;Contact Centre Agent&apos;))</errorConditionFormula>
    <errorMessage>Agent cannot edit record owned by Integration User</errorMessage>
</ValidationRule>