force-app/main/default/objects/Contact/validationRules/REMI_Enforce10DigitsMobileANDPhoneNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>REMI_Enforce10DigitsMobileANDPhoneNumber</fullName>
    <active>true</active>
    <description>Restrict HR coordinators from saving records with less than 10 digits in Mobile and Phone number on contact</description>
    <errorConditionFormula>$Profile.Name = &apos;HR Coordinator&apos; &amp;&amp; ((AND(OR( LEN( Phone ) &lt;= 9 , LEN( Phone ) &gt;= 11),NOT(ISBLANK(Phone))))  || (AND(OR( LEN(  MobilePhone  ) &lt;= 9 , LEN( MobilePhone ) &gt;= 11),NOT(ISBLANK(MobilePhone)))))</errorConditionFormula>
    <errorMessage>Please enter a 10 digit Phone/ Mobile Number</errorMessage>
</ValidationRule>