force-app/main/default/objects/Contact/listViews/AddParticipantsListView.listView-meta.xml
<ListView>
    <fullName>AddParticipantsListView</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <filterScope>Everything</filterScope>
    <label>ContactsInternalUseOnly</label>
</ListView>