force-app/main/default/objects/Contact/listViews/DCP_Contacts.listView-meta.xml
<ListView>
    <fullName>DCP_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.dcp_Contact</value>
    </filters>
    <label>DCP Contacts</label>
</ListView>